Run was good. about 5minutes for yyy and 24 minutes for xxx. 29 minutes total, and initial run was about 50 minutes total.

--- a/column_oriented/CMakeLists.txt
+++ b/column_oriented/CMakeLists.txt
@@ -25,6 +25,7 @@ if(DEFINED CMAKE_CXX_COMPILER)
   message("CMAKE VAR defined Setting CMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}")
 elseif(NOT DEFINED ENV{CXX})
   set(CMAKE_CXX_COMPILER "/usr/local/bin/clang++-devel")
+  set(CMAKE_LINKER "/usr/local/bin/ld.lld")
   message("CXX not defined Setting CMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}")
 else(DEFINED ENV{CXX})
   set(CMAKE_CXX_COMPILER $ENV{CXX})
@@ -49,7 +50,8 @@ if(DEFINED CMAKE_LINKER)
   set(CMAKE_LINKER ${CMAKE_LINKER})
 elseif(NOT DEFINED ENV{LD})
   #set(CMAKE_LINKER "/usr/local/bin/ld.gold")
-  set(CMAKE_LINKER "/usr/local/bin/ld")
+  set(CMAKE_LINKER "/usr/local/bin/ld.lld-devel")
+  #set(CMAKE_LINKER "/usr/local/bin/ld")
 else(DEFINED ENV{LD})
   set(CMAKE_LINKER $ENV{LD})
 endif()
@@ -74,7 +76,8 @@ CHECK_CXX_COMPILER_FLAG("--std=c++17" SUPPORTS_CXX17)
 CHECK_CXX_COMPILER_FLAG("--std=c++14" SUPPORTS_CXX14)
 CHECK_CXX_COMPILER_FLAG("--std=c++11" SUPPORTS_CXX11)
 if( USE_FLTO OR NOT DEFINED USE_FLTO)
-CHECK_CXX_COMPILER_FLAG("-v -flto -fuse-ld=gold"  SUPPORTS_FLTO)
+  #CHECK_CXX_COMPILER_FLAG("-v -flto -fuse-ld=gold"  SUPPORTS_FLTO)
+CHECK_CXX_COMPILER_FLAG("-v -flto "  SUPPORTS_FLTO)
 endif()
 CHECK_CXX_COMPILER_FLAG("-gdwarf-4" SUPPORTS_DWARF4)
 CHECK_CXX_COMPILER_FLAG("-gdwarf-2" SUPPORTS_DWARF2)
